--- a/README
+++ b/README
@@ -1,17 +1,4 @@
-= Zimbra Python Client =
+= API SOAP Zimbra Python =
 
-Report a bug at: http://github.com/ilgarm/pyzimbra/issues
-Documentation available online at: http://trac.lab.az/pyzimbra/wiki
+Add ZimbraAdmin SOAP API
 
-=== Release notes ===
-
-version 0.1 - current
-
-ticket:2 - zimbra client authentication
-ticket:8 - zimbra soap wrapper
-ticket:22 - rewrite all xml manipulations to use single library, minidom or lxml.etree
-ticket:31 - add proxy support
-ticket:27 - error and exception handling
-ticket:33 - switch to SOAPpy
-ticket:20 - zimbra client preauthentication
-ticket:21 - zimbra client administrative authentication
