--- a/README
+++ b/README
@@ -2,3 +2,11 @@
 
 Add ZimbraAdmin SOAP API
 
+
+=== Links API Zimbra
+
+http://files.zimbra.com/docs/soap_api/8.0.2/soapapi-zimbra-doc/api-reference/index.html
+
+http://www.zemris.fer.hr/~sgros/devel/zimbra.shtml
+
+http://www.btactic.org/?page_id=268
